*Thu Jan 14 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- improve grammar in template.3dd

*Mon Jan 11 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- improve parsing data format for internal element forces and displacements
- separate deformed mesh and undeformed mesh data files
- shorten loops for writing mesh data files
- stream-line writing of gnuplot scripts ...
sections of duplicated code are combined and 
mode shapes for 3D frames are no longer plotted in 2D before being plotted in 3D
- update user-manual.html
- plotting of internal forces in Gnuplot is the next step (?)

*Fri Jan 8 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- add function force_bent_beam to frame3dd_io.c to compute deformed mesh
shapes from static loads using statics and mechanics equations instead of a
simple cubic interpolation between joint displacements and rotations.
This function parses the output data file containing internal forces and
transverse displacements.  This function may be easily extended to plot
diagrams of internal axial force, shear force, torsion moment and bending
moment.   
- modification to formatting of internal force data file to make parsing a
little easier
- bug fix in internal frame element displacements (add coord. transformation)
- update user-manual.html

*Thu Jan 7 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- add torsion and axial displacement to frame element internal displacements

*Wed Jan 6 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- if dx == -1 then skip the calculation of internal forces and transverse
displacements.  
- update examples/*.3dd data files with new dx variable and re-run all examples
- update matlab interface matlab/frame_3dd.m
- update user-manual.html

*Tue Jan 5 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
- fix error in equivalent load calculation for trapezoidally-distributed loads
acting along the local x-axis.
- add function "write_internal_forces" to frame3dd_io.c in order to compute